fix: links overflow for mobile view

--- a/portfolio-site/src/components/Sidebar/styles.css
+++ b/portfolio-site/src/components/Sidebar/styles.css
@@ -39,13 +39,10 @@
 }
 
 #sidebar li > a{
-  padding: 0.3em 0;
-}
-
-#sidebar li > a{
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 0.3em 0;
 }
 
 #sidebar li > a > svg{
@@ -54,6 +51,16 @@
 
 #sidebar a {
   color: inherit;
+}
+
+@media (max-width: 1100px) and (min-width: 768px){
+  #sidebar p {
+    font-size: 0 !important;
+  }
+
+  #sidebar ul {
+    display: flex;
+  }
 }
 
 @media (max-width: 768px) {
